--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,20 +39,20 @@ body {
   line-height: 150%;
 }
 
-.wrapper {
+.post__wrapper {
   width: 100%;
   height: 100%;
   padding: 2rem 20rem;
 }
 
-.list {
+.post__list {
   display: flex;
   flex-direction: column;
   gap: 3rem;
   width: 100%;
 }
 
-.item {
+.post__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
